tests/neg/erased-lazy-given.check
-- [E218] Type Error: tests/neg/erased-lazy-given.scala:8:13 -----------------------------------------------------------
8 |  lazy given E = E() // error
  |             ^
  |             given instance given_E is implicitly `erased` since its type extends trait `compiletime.Erased`.
  |             But `erased` is not allowed for this kind of definition.
  |
  | longer explanation available when compiling with `-explain`
